trying yet again to fix title alignment

--- a/style.css
+++ b/style.css
@@ -136,13 +136,12 @@ body {
 }
 
 .main-content-wrapper {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   width: 100%;
-  text-align: left;
+  text-align: center;
 }
 
 .center-header {
@@ -151,9 +150,9 @@ body {
   flex-direction: column;
   align-items: center;
   margin-bottom: 1em;
-  position: relative;
-  left: 6.25%;
-  transform: translateX(0);
+  position: static;
+  left: 0;
+  transform: none;
 }
 
 #main-title {
